--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head><title>ci-demo</title></head>
+    <head><title>ci-demo</head>
    <body>
     <h1>Hello friends</h1>
    </body>
